--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,8 @@ jobs:
         - run:
             name: dependencies
             command: |
-              mvn -v
-              cp settings.xml ~/.m2/settings.xml
               cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils/*.sh && cd -
-              [[ ${CIRCLE_BRANCH} != 'master' ]] || ( mvn versions:set -DnewVersion=$(cat .release) && mvn versions:resolve-ranges && mvn versions:lock-snapshots )
-               mvn install -e -q -Drat.skip -Dsource.skip=true -DgenerateReports=false -Dmaven.javadoc.skip=true -Dmaven.test.skip
+              ~/build-utils/maven_make_deps.sh
 
         - save_cache:
             key: dependency-cache
