--- a/pom.xml
+++ b/pom.xml
@@ -805,7 +805,7 @@
                                 <!--<message>No Snapshots Allowed!</message>-->
                                 <!--</requireReleaseDeps>-->
                                 <requireMavenVersion>
-                                    <version>[,${maven.version}]</version>
+                                    <version>[${maven.version},]</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
                                     <version>${jdk.version}</version>
