--- a/pom.xml
+++ b/pom.xml
@@ -382,24 +382,9 @@
                 <version>1.9.13</version>
             </dependency>
             <dependency>
-                <groupId>com.orientechnologies</groupId>
-                <artifactId>orient-commons</artifactId>
-                <version>${orientdb.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.orientechnologies</groupId>
-                <artifactId>orientdb-core</artifactId>
-                <version>${orientdb.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.orientechnologies</groupId>
-                <artifactId>orientdb-graphdb</artifactId>
-                <version>${orientdb.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.orientechnologies</groupId>
-                <artifactId>orientdb-server</artifactId>
-                <version>${orientdb.version}</version>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>1.4.10</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
