--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,17 +36,19 @@ jobs:
             name: test
             command: |
                  mvn -q -T 1C -Drat.skip -Dsource.skip=true -DgenerateReports=false -Dmaven.javadoc.skip=true install
+                 ./build-docs.sh
+                 ./pack/pack.sh
             no_output_timeout: 600
 
-        - run:
-            name: build-docs
-            command: |
-                ./build-docs.sh
-
-        - run:
-            name: pack
-            command: |
-                ./pack/pack.sh
+#        - run:
+#            name: build-docs
+#            command: |
+#
+#
+#        - run:
+#            name: pack
+#            command: |
+#                
 
         - deploy:
             command: |
