--- a/dollar-docs/src/main/webapp/_config.yml
+++ b/dollar-docs/src/main/webapp/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/dollar/" # the subpath of your site, e.g. /blog/
 url: "http://neilellis.github.io/"
 twitter_username: neilellis
-github_username:  neilellis
+github_username:  sillelien
 
 # Build settings
 markdown: kramdown
