--- a/pom.xml
+++ b/pom.xml
@@ -603,8 +603,8 @@
                     <dependencies>
                         <dependency>
                             <groupId>com.google.code.findbugs</groupId>
-                            <artifactId>bcel</artifactId>
-                            <version>2.0.2</version>
+                            <artifactId>bcel-findbugs</artifactId>
+                            <version>6.0</version>
                         </dependency>
                         <dependency>
                             <groupId>org.apache.maven.shared</groupId>
