--- a/pom.xml
+++ b/pom.xml
@@ -380,7 +380,7 @@
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
                 <artifactId>xstream</artifactId>
-                <version>1.4.10-java7</version>
+                <version>1.4.8</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
