--- a/pom.xml
+++ b/pom.xml
@@ -478,7 +478,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.20</version>
                 <configuration>
                     <aggregate>true</aggregate>
                 </configuration>
@@ -511,7 +511,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
-                <version>2.11</version>
+                <version>2.12.1</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -721,6 +721,7 @@
                                         <version>${jdk.version}</version>
                                     </requireJavaVersion>
                                     <requireOS>
+                                        <!--We don't build on Windows yet-->
                                         <family>unix</family>
                                     </requireOS>
                                     <requirePluginVersions>
